--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-fragment": "^1.5.1",
     "vue-marquee-text-component": "^1.1.1",
     "vue-router": "^3.4.3",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
