--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "v-click-outside": "^3.1.1",
     "vue": "^2.6.11",
     "vue-fragment": "^1.5.1",
+    "vue-js-modal": "^2.0.0-rc.6",
     "vue-marquee-text-component": "^1.1.1",
     "vue-router": "^3.4.3",
     "vuejs-datepicker": "^1.6.2",
+    "vuelidate": "^0.7.5",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
