--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -25,4 +25,4 @@ jobs:
           git init
           git add -A
           git commit -m "🚀 Deploy id ${GITHUB_RUN_ID}"
-          git push -f "git@github.com:Maeglian/${GITHUB_REPOSITORY}.git" master:gh-pages
+          git push -f "https://github.com/Maeglian/roomcasino.git" master:gh-pages
