added auth access token

--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -14,13 +14,15 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12'
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-      - name: set git username and email
+      - name: git auth
+        env:
+          access_token: '${{ secrets.AUTH_ACCESS_TOKEN }}'
         run: |
+          git config --global credential.helper store
+          echo "https://${access_token}:x-oauth-basic@github.com" > ~/.git-credentials
           git config --global user.email "misaeva@wakeapp.ru"
           git config --global user.name "misaeva"
       - name: deploy to gh-pages
-
         run: |
           npm i
           NODE_ENV=production npm run build
