--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "paymentiq-cashier-bootstrapper": "^1.3.0",
     "v-click-outside": "^3.1.1",
     "vue": "^2.6.11",
     "vue-fragment": "^1.5.1",
