--- a/.github/workflows/deployProd.yml
+++ b/.github/workflows/deployProd.yml
@@ -20,11 +20,6 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '14'
-      # Записываем в переменные окружения имя текущей ветки
-      # Чтобы избежать конфиликтов с URL, меняем точки на _, а слеши на минусы
-      - name: Get branch name
-        shell: bash
-        run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g' | sed 's/\./_/g' | sed 's/[A-Z]/\L&/g')"
       # Устанавливаем зависимости для сборки
       - name: Install Dependencies
         run: npm i
@@ -40,7 +35,7 @@ jobs:
           username: ${{ secrets.DEPLOY_SERVER_USERNAME }}
           key: ${{ secrets.DEPLOY_SERVER_KEY }}
           source: ${{ env.BUILD_SCRIPT_OUTPUT }}
-          target: ${{ env.DEPLOY_PATH }}/${{ env.BRANCH_NAME }}
+          target: ${{ env.DEPLOY_PATH }}
           strip_components: 1
       - name: Print Info
         run: echo "Deployed at https://roomcasino.com/"
