--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "cookieparser": "^0.1.0",
     "core-js": "^3.6.5",
     "js-cookie": "^2.2.1",
     "nuxt": "^2.14.6",
-    "paymentiq-cashier-bootstrapper": "^1.3.0",
     "v-click-outside": "^3.1.1",
     "vue-fragment": "^1.5.1",
     "vue-js-modal": "^2.0.0-rc.6",
