corrected deployDev script

--- a/.github/workflows/deployDev.yml
+++ b/.github/workflows/deployDev.yml
@@ -2,8 +2,8 @@ name: deployDev
 
 on:
   push:
-    branches:
-      - '!master'
+    branches-ignore:
+      - 'master'
   workflow_dispatch:
 
 env:
