--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
-    "build:sandbox": "nuxt build NUXT_ENV_MODE=sandbox",
+    "build:sandbox": "nuxt build --NUXT_ENV_MODE=sandbox",
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
