--- a/.github/workflows/deployDev.yml
+++ b/.github/workflows/deployDev.yml
@@ -42,11 +42,15 @@ jobs:
           source: ${{ env.BUILD_SCRIPT_OUTPUT }}
           target: ${{ env.DEPLOY_PATH }}/${{ env.BRANCH_NAME }}
       - name: Start server
-        shell: bash
-        run: pwd cd ${{ env.DEPLOY_PATH }}/${{ env.BRANCH_NAME }}
-        - name: Install pm2
-          run: npm i pm2
-        - name: Run pm2
-          run: $START_SCRIPT
+          uses: appleboy/ssh-action@master
+          with:
+            host: ${{ secrets.SSH_HOST }}
+            username: ${{ secrets.SSH_USERNAME }}
+            key: ${{ secrets.SSH_KEY }}
+            port: ${{ secrets.SSH_PORT }}
+            script: |
+              cd ~/${{ env.DEPLOY_PATH }}/${{ env.BRANCH_NAME }}
+              npm i pm2
+              pm2 start ecosystem.config.js
       - name: Print Info
         run: echo "http://${BRANCH_NAME}.sandbox.roomcasino.com/"
