--- a/.github/workflows/deployDev.yml
+++ b/.github/workflows/deployDev.yml
@@ -31,6 +31,8 @@ jobs:
       # Собираем приложение
       - name: Build Appliction
         run: $BUILD_SCRIPT
+      - name: Copy ecosystem.config
+        run: cp ecosystem.config.js ${{ env.BUILD_SCRIPT_OUTPUT }}
       # Доставляем собранное приложение на сервер
       - name: Deploy to Server
         uses: appleboy/scp-action@master
