--- a/.github/workflows/deployDev.yml
+++ b/.github/workflows/deployDev.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Copy ecosystem.config
         run: |
           cp ecosystem.config.js ${{ env.BUILD_SCRIPT_OUTPUT }}
-          ls
+          ls .nuxt
       # Доставляем собранное приложение на сервер
       - name: Deploy to Server
         uses: appleboy/scp-action@master
