--- a/.github/workflows/deployDev.yml
+++ b/.github/workflows/deployDev.yml
@@ -25,26 +25,6 @@ jobs:
       - name: Get branch name
         shell: bash
         run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g' | sed 's/\./_/g' | sed 's/[A-Z]/\L&/g')"
-      # Устанавливаем зависимости для сборки
-      - name: Install Dependencies
-        run: npm i
-      # Собираем приложение
-      - name: Build Appliction
-        run: $BUILD_SCRIPT
-      - name: Copy ecosystem.config
-        run: |
-          cp ecosystem.config.js ${{ env.BUILD_SCRIPT_OUTPUT }}
-          ls .nuxt
-      # Доставляем собранное приложение на сервер
-      - name: Deploy to Server
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.DEPLOY_SERVER_HOST }}
-          port: ${{ secrets.DEPLOY_SERVER_PORT }}
-          username: ${{ secrets.DEPLOY_SERVER_USERNAME }}
-          key: ${{ secrets.DEPLOY_SERVER_KEY }}
-          source: ${{ env.BUILD_SCRIPT_OUTPUT }}
-          target: ${{ env.DEPLOY_PATH }}/${{ env.BRANCH_NAME }}
       - name: Start server
         uses: appleboy/ssh-action@master
         with:
@@ -53,7 +33,12 @@ jobs:
           key: ${{ secrets.DEPLOY_SERVER_KEY }}
           port: ${{ secrets.DEPLOY_SERVER_PORT }}
           script: |
-            cd ${{ env.DEPLOY_PATH }}/${{ env.BRANCH_NAME }}
+            cd ${{ env.DEPLOY_PATH }}
+            git clone https://github.com/wakeapp/roomcasino.git ${{ env.BRANCH_NAME }}
+            cd ${{ env.BRANCH_NAME }}
+            npm i
+            nom run build
+            ls
             pm2 start ecosystem.config.js
       - name: Print Info
         run: echo "http://${BRANCH_NAME}.sandbox.roomcasino.com/"
