--- a/.github/workflows/deployDev.yml
+++ b/.github/workflows/deployDev.yml
@@ -11,6 +11,7 @@ env:
   BUILD_SCRIPT: npm run build:sandbox
   BUILD_SCRIPT_OUTPUT: .nuxt
   START_SCRIPT: pm2 start ecosystem.config.js
+  REPOSIRORY_NAME: /wakeapp/roomcasino.git
 
 jobs:
   deploy:
@@ -25,27 +26,7 @@ jobs:
       - name: Get branch name
         shell: bash
         run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g' | sed 's/\./_/g' | sed 's/[A-Z]/\L&/g')"
-      # Устанавливаем зависимости для сборки
-      - name: Install Dependencies
-        run: npm i
-      # Собираем приложение
-      - name: Build Appliction
-        run: $BUILD_SCRIPT
-      - name: Copy ecosystem.config
-        run: |
-          cp ecosystem.config.js ${{ env.BUILD_SCRIPT_OUTPUT }}
-          ls .nuxt
-      # Доставляем собранное приложение на сервер
-      - name: Deploy to Server
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.DEPLOY_SERVER_HOST }}
-          port: ${{ secrets.DEPLOY_SERVER_PORT }}
-          username: ${{ secrets.DEPLOY_SERVER_USERNAME }}
-          key: ${{ secrets.DEPLOY_SERVER_KEY }}
-          source: ${{ env.BUILD_SCRIPT_OUTPUT }}
-          target: ${{ env.DEPLOY_PATH }}/${{ env.BRANCH_NAME }}
-          strip_components: 1
+      # Доставляем приложение на сервер и запускаем его
       - name: Start server
         uses: appleboy/ssh-action@master
         with:
@@ -54,7 +35,12 @@ jobs:
           key: ${{ secrets.DEPLOY_SERVER_KEY }}
           port: ${{ secrets.DEPLOY_SERVER_PORT }}
           script: |
-            cd ${{ env.DEPLOY_PATH }}/${{ env.BRANCH_NAME }}
-            pm2 restart ecosystem.config.js
+            cd ${{ env.DEPLOY_PATH }}
+            rm -rf ${{ env.BRANCH_NAME }}
+            git clone https://${{ secrets.ACCESS_TOKEN }}@github.com/${{ env.REPOSIRORY_NAME }} {{ env.BRANCH_NAME }} --branch {{ env.BRANCH_NAME }}
+            cd ${{ env.BRANCH_NAME }}
+            npm i
+            npm run build
+            pm2 start ecosystem.config.js
       - name: Print Info
         run: echo "http://${BRANCH_NAME}.sandbox.roomcasino.com/"
