--- a/.github/workflows/deployDev.yml
+++ b/.github/workflows/deployDev.yml
@@ -41,6 +41,6 @@ jobs:
             cd ${{ env.BRANCH_NAME }}
             npm i
             npm run build
-            pm2 restart node_modules/nuxt/bin/nuxt.js -i max
+            pm2 restart node_modules/nuxt-start/bin/nuxt-start.js --name roomcasino -i max
       - name: Print Info
         run: echo "http://${BRANCH_NAME}.sandbox.roomcasino.com/"
