--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "ENV=sandbox nuxt",
     "build": "nuxt build",
-    "build:sandbox": "nuxt build --mode sandbox",
+    "build:sandbox": "ENV=sandbox nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.7",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/style-resources": "^1.0.0",
     "sass": "^1.28.0",
     "sass-loader": "^10.0.4"
