--- a/.github/workflows/deployProd.yml
+++ b/.github/workflows/deployProd.yml
@@ -9,7 +9,9 @@ on:
 env:
   DEPLOY_PATH: /www/roomcasino/prod
   BUILD_SCRIPT: npm run build
-  BUILD_SCRIPT_OUTPUT: dist
+  BUILD_SCRIPT_OUTPUT: .nuxt
+  START_SCRIPT: pm2 restart node_modules/nuxt-start/bin/nuxt-start.js --name roomcasino -i max
+  REPOSIRORY_NAME: wakeapp/roomcasino.git
 
 jobs:
   deploy:
@@ -19,22 +21,26 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '14'
-      # Устанавливаем зависимости для сборки
-      - name: Install Dependencies
-        run: npm i
-      # Собираем приложение
-      - name: Build Appliction
-        run: $BUILD_SCRIPT
-      # Доставляем собранное приложение на сервер
-      - name: Deploy to Server
-        uses: appleboy/scp-action@master
+      # Записываем в переменные окружения имя текущей ветки
+      # Чтобы избежать конфиликтов с URL, меняем точки на _, а слеши на минусы
+      - name: Get branch name
+        shell: bash
+        run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g' | sed 's/\./_/g' | sed 's/[A-Z]/\L&/g')"
+      # Доставляем приложение на сервер и запускаем его
+      - name: Deploy to server
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.DEPLOY_SERVER_HOST }}
-          port: ${{ secrets.DEPLOY_SERVER_PORT }}
           username: ${{ secrets.DEPLOY_SERVER_USERNAME }}
           key: ${{ secrets.DEPLOY_SERVER_KEY }}
-          source: ${{ env.BUILD_SCRIPT_OUTPUT }}
-          target: ${{ env.DEPLOY_PATH }}
-          strip_components: 1
+          port: ${{ secrets.DEPLOY_SERVER_PORT }}
+          script: |
+            cd ${{ env.DEPLOY_PATH }}
+            rm -rf ${{ env.BRANCH_NAME }}
+            git clone 'https://${{ secrets.ACCESS_TOKEN }}@github.com/${{ env.REPOSIRORY_NAME }}' ${{ env.BRANCH_NAME }} --branch ${{ env.BRANCH_NAME }}
+            cd ${{ env.BRANCH_NAME }}
+            npm i
+            ${{ env.BUILD_SCRIPT }}
+            ${{ START_SCRIPT }}
       - name: Print Info
-        run: echo "Deployed at https://roomcasino.com/"
+        run: echo "http://${BRANCH_NAME}.sandbox.roomcasino.com/"
