--- a/.github/workflows/deployDev.yml
+++ b/.github/workflows/deployDev.yml
@@ -10,7 +10,7 @@ env:
   DEPLOY_PATH: /www/roomcasino/dev
   BUILD_SCRIPT: npm run build:sandbox
   BUILD_SCRIPT_OUTPUT: .nuxt
-  START_SCRIPT: pm2 restart node_modules/nuxt-start/bin/nuxt-start.js --name roomcasino -i max
+  START_SCRIPT: pm2 start node_modules/nuxt-start/bin/nuxt-start.js --name roomcasino -i max
   REPOSIRORY_NAME: wakeapp/roomcasino.git
 
 jobs:
