--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt --port 8080",
     "build": "NUXT_ENV_MODE=production nuxt build",
-    "build:sandbox": "NUXT_ENV_MODE=sandbox nuxt build",
+    "build:sandbox": "NUXT_ENV_MODE=sandbox nuxt generate",
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
