--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "nuxt --port 8080",
     "build": "NUXT_ENV_MODE=production nuxt build",
+    "build:sandbox": "NUXT_ENV_MODE=sandbox nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
