--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "@nuxtjs/style-resources": "^1.0.0",
     "sass": "^1.28.0",
     "sass-loader": "^10.0.4"
-  }
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
