added range plugin

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "v-click-outside": "^3.1.1",
     "vue-js-modal": "^2.0.0-rc.6",
     "vue-marquee-text-component": "^1.1.1",
+    "vue-slider-component": "^3.2.10",
     "vuejs-datepicker": "^1.6.2",
     "vuelidate": "^0.7.5"
   },
