--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookieparser": "^0.1.0",
     "core-js": "^3.6.5",
     "js-cookie": "^2.2.1",
+    "moment": "^2.29.1",
     "nuxt": "^2.14.6",
     "nuxt-start": "^2.14.7",
     "v-click-outside": "^3.1.1",
