--- a/.github/workflows/deployDev.yml
+++ b/.github/workflows/deployDev.yml
@@ -26,7 +26,7 @@ jobs:
       # Чтобы избежать конфиликтов с URL, меняем точки на _, а слеши на минусы
       - name: Get branch name
         shell: bash
-        run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g' | sed 's/\./_/g' | sed 's/[A-Z]/\L&/g')"
+        run: echo "echo ${GITHUB_REF#refs/heads/} >> $BRANCH_NAME | sed 's/\//-/g' | sed 's/\./_/g' | sed 's/[A-Z]/\L&/g')"
       # Доставляем приложение на сервер и запускаем его
       - name: Deploy to server
         uses: appleboy/ssh-action@master
@@ -38,7 +38,7 @@ jobs:
           script: |
             cd ${{ env.DEPLOY_PATH }}
             rm -rf ${{ env.DEPLOY_DIR }}
-            git clone 'https://${{ secrets.ACCESS_TOKEN }}@github.com/${{ env.REPOSIRORY_NAME }}' ${{ env.DEPLOY_DIR }} --branch ${{ env.BRANCH_NAME }}
+            git clone 'https://${{ secrets.ACCESS_TOKEN }}@github.com/${{ env.REPOSIRORY_NAME }}' ${{ env.DEPLOY_DIR }} --branch $BRANCH_NAME
             cd ${{ env.DEPLOY_DIR }}
             npm i
             ${{ env.BUILD_SCRIPT }}
