--- a/.github/workflows/deployDev.yml
+++ b/.github/workflows/deployDev.yml
@@ -38,7 +38,7 @@ jobs:
           script: |
             cd ${{ env.DEPLOY_PATH }}
             rm -rf ${{ env.DEPLOY_DIR }}
-            git clone 'https://${{ secrets.ACCESS_TOKEN }}@github.com/${{ env.REPOSIRORY_NAME }}' ${{ env.DEPLOY_DIR }} --branch $BRANCH_NAME
+            git clone 'https://${{ secrets.ACCESS_TOKEN }}@github.com/${{ env.REPOSIRORY_NAME }}' ${{ env.DEPLOY_DIR }} --branch ${{ env.BRANCH_NAME }}
             cd ${{ env.DEPLOY_DIR }}
             npm i
             ${{ env.BUILD_SCRIPT }}
