--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "dev": "nuxt --port 8080",
     "build": "NUXT_ENV_MODE=production nuxt build",
-    "build:sandbox": "NUXT_ENV_MODE=sandbox nuxt build",
+    "build:sandbox": "NUXT_ENV_MODE=sandbox nuxt generate",
     "start": "nuxt start",
-    "generate": "nuxt generate",
+    "generate": "nuxt generate -c nuxt.config.generate.js",
     "lint": "npm run lint:js && npm run lint:css",
     "lintfix": "eslint --fix --ext .js,.vue . && stylelint '**/*.{scss,vue}' --fix",
     "lint:js": "eslint --ext .js,.vue .",
