corrected deploy scripts

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "nuxt --port 8080",
     "build": "NUXT_ENV_MODE=production nuxt build",
-    "build:sandbox": "NUXT_ENV_MODE=sandbox nuxt generate",
-    "build:stage": "nuxt generate",
+    "build:sandbox": "NUXT_ENV_MODE=sandbox npm run generate",
+    "build:stage": "npm run generate",
     "start": "nuxt start",
     "start:sandbox": "NUXT_ENV_MODE=sandbox nuxt start",
     "generate": "nuxt generate -c nuxt.config.generate.js",
