--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-js-modal": "^2.0.0-rc.6",
     "vue-marquee-text-component": "^1.1.1",
     "vue-slider-component": "^3.2.10",
+    "vue2-dropzone": "^3.6.0",
     "vuejs-datepicker": "^1.6.2",
     "vuelidate": "^0.7.5"
   },
