--- a/.github/workflows/deployDev.yml
+++ b/.github/workflows/deployDev.yml
@@ -9,7 +9,7 @@ on:
 env:
   DEPLOY_PATH: /www/roomcasino
   DEPLOY_DIR: dev
-  BUILD_SCRIPT: npm run build
+  BUILD_SCRIPT: npm run build:stage
   BUILD_SCRIPT_OUTPUT: .nuxt
   START_SCRIPT: PORT=3001 pm2 restart node_modules/nuxt-start/bin/nuxt-start.js --name roomcasino-sandbox -i max
   REPOSIRORY_NAME: wakeapp/roomcasino.git
