--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint:css": "stylelint '**/*.{scss, vue}'"
   },
   "dependencies": {
+    "@nuxtjs/gtm": "^2.4.0",
     "axios": "^0.21.0",
     "cookieparser": "^0.1.0",
     "core-js": "^3.6.5",
