--- a/.github/workflows/deployDev.yml
+++ b/.github/workflows/deployDev.yml
@@ -7,11 +7,11 @@ on:
   workflow_dispatch:
 
 env:
-  DEPLOY_PATH: /www/roomcasino
+  DEPLOY_PATH: /www/ninecasino
   DEPLOY_DIR: dev
   BUILD_SCRIPT: npm run build:dev
   BUILD_SCRIPT_OUTPUT: .nuxt
-  START_SCRIPT: PORT=3001 pm2 restart node_modules/nuxt-start/bin/nuxt-start.js --name roomcasino-sandbox -i max
+  START_SCRIPT: PORT=3001 pm2 restart node_modules/nuxt-start/bin/nuxt-start.js --name ninecasino-sandbox -i max
   REPOSIRORY_NAME: wakeapp/roomcasino.git
 
 jobs:
@@ -44,4 +44,4 @@ jobs:
             ${{ env.BUILD_SCRIPT }}
             ${{ env.START_SCRIPT }}
       - name: Print Info
-        run: echo "http://${{ env.DEPLOY_DIR }}.sandbox.roomcasino.com/"
+        run: echo "http://${{ env.DEPLOY_DIR }}.ninecasino.com/"
