--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "nuxt": "^2.15.3",
+    "nuxt-i18n": "^6.22.3",
     "nuxt-start": "^2.15.3",
     "v-click-outside": "^3.1.1",
     "vue-js-modal": "^2.0.0-rc.6",
