--- a/.github/workflows/deployDev.yml
+++ b/.github/workflows/deployDev.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   DEPLOY_PATH: /www/ninecasino
+  DEPLOY_DIR_TEMP: dev_temp
   DEPLOY_DIR: dev
   BUILD_SCRIPT: npm run build:dev
   BUILD_SCRIPT_OUTPUT: .nuxt
@@ -37,11 +38,13 @@ jobs:
           port: ${{ secrets.DEPLOY_SERVER_PORT }}
           script: |
             cd ${{ env.DEPLOY_PATH }}
-            rm -rf ${{ env.DEPLOY_DIR }}
-            git clone 'https://${{ secrets.ACCESS_TOKEN }}@github.com/${{ env.REPOSIRORY_NAME }}' ${{ env.DEPLOY_DIR }} --branch ${{ env.BRANCH_NAME }}
-            cd ${{ env.DEPLOY_DIR }}
+            git clone 'https://${{ secrets.ACCESS_TOKEN }}@github.com/${{ env.REPOSIRORY_NAME }}' ${{ env.DEPLOY_DIR_TEMP }} --branch ${{ env.BRANCH_NAME }}
+            cd ${{ env.DEPLOY_DIR_TEMP }}
             npm i
             ${{ env.BUILD_SCRIPT }}
             ${{ env.START_SCRIPT }}
+            cd ..
+            rm -rf ${{ env.DEPLOY_DIR }}
+            mv ${{ env.DEPLOY_DIR_TEMP }} ${{ env.DEPLOY_DIR }}
       - name: Print Info
         run: echo "http://${{ env.DEPLOY_DIR }}.ninecasino.com/"
