--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nuxt": "^2.15.3",
     "nuxt-i18n": "^6.22.3",
     "nuxt-start": "^2.15.3",
+    "paymentiq-cashier-bootstrapper": "^1.3.8",
     "v-click-outside": "^3.1.1",
     "vue-js-modal": "^2.0.0-rc.6",
     "vue-marquee-text-component": "^1.1.1",
