NINE-526 added sentry

--- a/.github/workflows/deployStage.yml
+++ b/.github/workflows/deployStage.yml
@@ -30,6 +30,8 @@ jobs:
         run: npm i
       # Собираем приложение
       - name: Build Appliction
+        env:
+          GIT_COMMIT_SHA: $GITHUB_SHA
         run: $BUILD_SCRIPT
       # Доставляем собранное приложение на сервер
       - name: Deploy to Server
