--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@nuxtjs/gtm": "^2.4.0",
     "@nuxtjs/sentry": "^5.1.0",
+    "@nuxtjs/sitemap": "^2.4.0",
     "axios": "^0.21.1",
     "cookieparser": "^0.1.0",
     "core-js": "^3.9.1",
