--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nuxt-start": "^2.15.3",
     "paymentiq-cashier-bootstrapper": "^1.3.8",
     "v-click-outside": "^3.1.1",
+    "vue-append": "^2.0.1",
     "vue-js-modal": "^2.0.0-rc.6",
     "vue-marquee-text-component": "^1.1.1",
     "vue-slider-component": "^3.2.10",
